# ai-security-camera

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: dev-install.sh
src/ai_security_camera/: __init__.py  config.py
src/ai_security_camera/api/: app.py  auth.py  schemas.py  storage.py
src/ai_security_camera/data/: __init__.py
src/ai_security_camera/data/templates/: __init__.py  uc_01.yaml  uc_02.yaml  uc_03.yaml
src/ai_security_camera/domain/: __init__.py  rules.py  templates.py  vlm_schema.py
src/ai_security_camera/notify/: __init__.py  ntfy.py  policy.py
src/ai_security_camera/pipeline/: __init__.py  detector.py  fake_yolo.py  ollama_client.py  orchestrator.py  rate_limit.py  sampler.py
tests/: test_api.py  test_notify.py  test_pipeline.py  test_rules.py  test_smoke.py  test_templates.py  test_vlm_schema.py
