[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-security-camera"
version = "0.1.0"
description = "Local VLM-based security camera pipeline (Phase 1 PoC)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_security_camera"]

[tool.hatch.build.targets.sdist]
include = ["src/ai_security_camera", "tests", "pyproject.toml", "README.md", "docker-compose.yml", "Dockerfile"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --import-mode=importlib"

[tool.coverage.run]
source = ["ai_security_camera"]
branch = true
omit = ["*/tests/*"]
